--- a/agendaonline/composer.json
+++ b/agendaonline/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "laravelcollective/html": "^6.1"
+        "laravelcollective/html": "^6.1",
+        "php-tmdb/api": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -41,7 +42,8 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "vendor/php-tmdb/api/lib"
         ]
     },
     "autoload-dev": {
